# meshopt2

./: Cargo.toml  README.md
examples/: demo.rs  encoder.rs
src/: error.rs  simplify.rs
