[package]
name = "meshopt2"
version = "0.1.9"
authors = ["Graham Wihlidal <graham@wihlidal.ca>", "Paris Douady <paris.douady@hotmail.fr>"]
description = "Rust ffi bindings and idiomatic wrapper for mesh optimizer"
homepage = "https://github.com/Uriopass/meshopt2"
repository = "https://github.com/Uriopass/meshopt2"
documentation = "https://docs.rs/meshopt2"
readme = "README.md"
keywords = ["mesh", "optimize", "cache", "3d", "rendering"]
categories = ["rendering", "rendering::engine"]
license = "MIT OR Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/src/meshoptimizer.h",
    "vendor/src/allocator.cpp",
    "vendor/src/clusterizer.cpp",
    "vendor/src/indexcodec.cpp",
    "vendor/src/indexgenerator.cpp",
    "vendor/src/overdrawanalyzer.cpp",
    "vendor/src/overdrawoptimizer.cpp",
    "vendor/src/simplifier.cpp",
    "vendor/src/spatialorder.cpp",
    "vendor/src/stripifier.cpp",
    "vendor/src/vcacheanalyzer.cpp",
    "vendor/src/vcacheoptimizer.cpp",
    "vendor/src/vertexcodec.cpp",
    "vendor/src/vfetchanalyzer.cpp",
    "vendor/src/vfetchoptimizer.cpp",
    "include_wasm32/*.h",
]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
float-cmp = "0.9"
thiserror = "1.0"
bitflags = "2.4.0"

[build-dependencies]
cc = { version = "1.0" }

[build-dependencies.bindgen]
version = "0.59"
optional = true

[dev-dependencies]
tobj = "3.2"
miniz_oxide = "0.5"
rand = "0.8"
libc = "0.2"
structopt = "0.3"
memoffset = "0.6"

[dev-dependencies.gltf]
version = "0.16"
features = ["extras", "names"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
generate_bindings = ["bindgen"]
